# digital_product_passport_python_sdk

./: .gitignore  README.md  markdown_docs.py  pyproject.toml
.github/workflows/: ci.yml
docs/solidity_python_sdk/: index.md  main.md
docs/solidity_python_sdk/contracts/: batch.md  geolocation.md  index.md  product_passport.md
docs/solidity_python_sdk/resources/: index.md
docs/solidity_python_sdk/resources/ABI/: index.md
dpp_sdk/: main.py
dpp_sdk/contracts/: batch.py  product_passport.py
examples/: details.json  usage.py
examples/passport_details/: Docker-compose.yml  Dockerfile  deploy.py  main.py  usage.md
solidity_python_sdk/: main.py  utils.py
solidity_python_sdk/contracts/: batch.py  geolocation.py  product_passport.py
solidity_python_sdk/utils/: error_handling.py  pinata_utils.py  utils.py
tests/: test_sdk.py
