[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dpp_sdk"
version = "0.1.0"
description = "SDK for interacting with Digital Product Passport smart contracts"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
  {name = "Luthiano Trarbach", email = "bhagah.trarbach@gmail.com"}
]
dependencies = ["web3", "python-dotenv", "requests"]

[project.urls]
Homepage = "https://github.com/DigitalProductPassport/digital_product_passport_python_sdk"

[tool.setuptools]
packages = ["dpp_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
